--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
   "description": "Smiler - веб мессенджер",
-  "main": "index.js",
   "scripts": {
+    "dev": "parcel src/pages/index.hbs --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
