--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Smiler - веб мессенджер",
   "scripts": {
     "dev": "parcel src/index.hbs --no-cache",
+    "start": "parcel build src/index.hbs && node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "postcss-nested": "^5.0.6"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "normalize.css": "^8.0.1"
   }
 }
