--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   },
   "homepage": "https://github.com/Gramoteev/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
-    "parcel": "^2.7.0",
-    "postcss": "^8.4.16",
-    "postcss-import": "^15.0.0",
-    "postcss-nested": "^5.0.6"
+    "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "parcel": "2.7.0",
+    "postcss": "8.4.16",
+    "postcss-import": "14.1.0",
+    "postcss-nested": "5.0.6"
   },
   "dependencies": {
-    "express": "^4.18.1",
-    "normalize.css": "^8.0.1"
+    "express": "4.18.1",
+    "normalize.css": "8.0.1"
+  }
+  "engines": {
+    "node" : ">=12.0.0"
   }
 }
