--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "parcel src/index.hbs --no-cache",
     "start": "parcel build src/index.hbs && node ./server.js",
+    "build": "parcel build src/index.hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
