--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "parcel": "2.7.0",
     "postcss": "8.4.16",
     "postcss-import": "14.1.0",
-    "postcss-nested": "5.0.6"
+    "postcss-nested": "5.0.6",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   },
   "dependencies": {
     "express": "4.18.1",
     "normalize.css": "8.0.1"
   },
   "engines": {
-    "node" : ">=12.0.0"
+    "node": ">=12.0.0"
   }
 }
