--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Smiler - веб мессенджер",
   "alias": {
-    "core": "src/core"
+    "core": "./src/core"
   },
   "scripts": {
     "dev": "parcel src/index.hbs --no-cache",
-    "start": "parcel src/index.html --no-source-maps --no-cache",
+    "start": "parcel src/index.html --no-cache",
     "build": "parcel build src/index.hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Gramoteev/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
+    "@parcel/transformer-inline-string": "^2.7.0",
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
