--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
-    "compilerOptions": {
+  "compilerOptions": {
+    "strict": true,
     "outDir": "dist",
+    "rootDir": "./src",
     "baseUrl": "./src",
     "sourceMap": true,
     "target": "es2017",
@@ -14,5 +16,6 @@
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "strictBindCallApply": true,
-   }
+    "esModuleInterop": true
+  }
 }
