--- a/package.json
+++ b/package.json
@@ -27,24 +27,24 @@
   "homepage": "https://github.com/Gramoteev/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "1.0.9",
-    "@parcel/transformer-inline-string": "^2.7.0",
-    "@types/node": "^18.7.18",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "babel-core": "^6.26.3",
-    "eslint": "^8.24.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "@parcel/transformer-inline-string": "2.7.0",
+    "@types/node": "18.7.18",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
+    "babel-core": "6.26.3",
+    "eslint": "8.24.0",
+    "eslint-config-airbnb": "19.0.4",
     "parcel": "2.7.0",
-    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-plugin-handlebars-precompile": "1.0.2",
     "postcss": "8.4.16",
     "postcss-import": "14.1.0",
     "postcss-nested": "5.0.6",
-    "stylelint": "^14.12.1",
-    "typescript": "^4.8.3"
+    "stylelint": "14.12.1",
+    "typescript": "4.8.3"
   },
   "dependencies": {
     "express": "4.18.1",
-    "nanoid": "^4.0.0",
+    "nanoid": "4.0.0",
     "normalize.css": "8.0.1"
   },
   "engines": {
