--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,20 @@
 {
-  "extends": "airbnb",
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "max-len": [2, 100],
-    "@typescript-eslint/no-unused-vars": 2
+    "max-len": [2, 140],
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unnecessary-type-constraint": "off"
     }
 }
