--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "styles": "./src/styles"
   },
   "scripts": {
-    "dev": "parcel src/index.hbs --no-cache",
-    "start": "parcel src/index.html --no-cache",
-    "build": "parcel build src/index.hbs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build && node ./server.js",
+    "build": "parcel build src/index.html  --no-source-maps --no-cache --public-url ./",
+    "eslint": "eslint **/*.ts --fix",
+    "stylelint": "stylelint **/*.pcss --fix"
   },
   "repository": {
     "type": "git",
@@ -33,21 +34,19 @@
     "@typescript-eslint/parser": "5.38.0",
     "babel-core": "6.26.3",
     "eslint": "8.24.0",
-    "eslint-config-airbnb": "19.0.4",
     "parcel": "2.7.0",
     "parcel-plugin-handlebars-precompile": "1.0.2",
     "postcss": "8.4.16",
     "postcss-import": "14.1.0",
     "postcss-nested": "5.0.6",
     "stylelint": "14.12.1",
+    "stylelint-config-standard": "28.0.0",
     "typescript": "4.8.3"
   },
   "dependencies": {
     "express": "4.18.1",
+    "handlebars": "4.7.7",
     "nanoid": "4.0.0",
     "normalize.css": "8.0.1"
-  },
-  "engines": {
-    "node": ">=12.0.0"
   }
 }
