--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel src/index.html --no-cache",
     "start": "npm run build && node ./server.js",
     "build": "parcel build src/index.html  --no-source-maps --no-cache --public-url ./",
     "eslint": "eslint **/*.ts --fix",
