--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,12 +5,12 @@
     "indentation": 2,
     "string-quotes": "single",
     "declaration-colon-space-before": "never",
-    "declaration-colon-space-after": "never",
+    "declaration-colon-space-after": "always-single-line",
     "rule-empty-line-before": "never",
     "media-feature-range-operator-space-before": "never",
     "media-feature-range-operator-space-after": "never",
     "media-feature-colon-space-before": "never",
-    "media-feature-colon-space-after": "never"
+    "media-feature-colon-space-after": "always"
   },
   "ignoreFiles": [
     "dist/*"
