--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,14 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/quotes": [
+      "error",
+      "single",
+      {
+        "avoidEscape": true,
+        "allowTemplateLiterals": true
+      }
+    ],
     "@typescript-eslint/no-unnecessary-type-constraint": "off"
     }
 }
