--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "5.38.0",
     "babel-core": "6.26.3",
     "eslint": "8.24.0",
+    "mocha": "10.1.0",
     "parcel": "2.7.0",
     "parcel-plugin-handlebars-precompile": "1.0.2",
     "postcss": "8.4.16",
