--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
     "babel-core": "6.26.3",
+    "chai": "4.3.6",
     "eslint": "8.24.0",
     "mocha": "10.1.0",
     "parcel": "2.7.0",
