--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "express": "4.18.1",
     "nanoid": "4.0.0",
-    "normalize.css": "8.0.1"
+    "normalize.css": "8.0.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
