--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^9.1.0",
     "chai": "4.3.6",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.24.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "^5.5.0",
@@ -54,12 +55,13 @@
     "typescript": "4.8.3",
     "webpack": "5.75.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.11.1"
+    "webpack-dev-server": "4.11.1",
+    "dotenv-webpack": "^8.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "express": "4.18.1",
     "nanoid": "4.0.0",
-    "normalize.css": "8.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "normalize.css": "8.0.1"
   }
 }
