--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
   },
   "homepage": "https://github.com/Gramoteev/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "7.20.2",
+    "@babel/preset-env": "7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/node": "18.7.18",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
     "babel-loader": "^9.1.0",
     "chai": "4.3.6",
-    "css-loader": "^6.7.1",
+    "css-loader": "6.7.1",
     "dotenv": "^16.0.3",
     "eslint": "8.24.0",
     "handlebars": "4.7.7",
