--- a/package.json
+++ b/package.json
@@ -32,36 +32,42 @@
   "devDependencies": {
     "@babel/core": "7.20.2",
     "@babel/preset-env": "7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@types/node": "18.7.18",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
-    "babel-loader": "^9.1.0",
+    "babel-loader": "9.1.0",
     "chai": "4.3.6",
     "css-loader": "6.7.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
+    "dotenv-webpack": "8.0.1",
     "eslint": "8.24.0",
     "handlebars": "4.7.7",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.2",
+    "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.1.0",
     "postcss": "8.4.16",
     "postcss-import": "14.1.0",
-    "postcss-loader": "^7.0.1",
+    "postcss-loader": "7.0.1",
     "postcss-nested": "5.0.6",
     "stylelint": "14.12.1",
     "stylelint-config-standard": "28.0.0",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "9.4.1",
     "typescript": "4.8.3",
     "webpack": "5.75.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.11.1",
-    "dotenv-webpack": "^8.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
     "express": "4.18.1",
     "nanoid": "4.0.0",
     "normalize.css": "8.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run eslint && npm run stylelint"
+    }
   }
 }
