--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint": "8.24.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
-    "husky": "8.0.2",
+    "husky": "^4.3.8",
     "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.1.0",
     "postcss": "8.4.16",
