--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "styles": "./src/styles"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack serve",
     "start": "npm run build && node ./server.js",
     "build": "webpack --mode production",
@@ -39,6 +39,7 @@
     "@babel/core": "7.20.2",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-typescript": "7.18.6",
+    "@types/jest": "^27.5.2",
     "@types/node": "18.7.18",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
@@ -67,8 +68,30 @@
     "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "express": "4.18.1",
-    "nanoid": "4.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "nanoid": "^3.3.4",
     "normalize.css": "8.0.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFiles": [
+      "<rootDir>/src/tests/setupEnv.ts"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/setup.ts"
+    ],
+    "moduleNameMapper": {
+      "\\.(pcss|svg|png)$": "identity-obj-proxy",
+      "^core(.*)$": "<rootDir>/src/core$1",
+      "^components(.*)$": "<rootDir>/src/components$1",
+      "^helpers(.*)$": "<rootDir>/src/helpers$1",
+      "^controllers(.*)$": "<rootDir>/src/controllers$1",
+      "^api(.*)$": "<rootDir>/src/api$1",
+      "^pages(.*)$": "<rootDir>/src/pages$1",
+      "^tests(.*)$": "<rootDir>/src/tests$1"
+    }
   }
 }
