--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@babel/core": "7.20.2",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-typescript": "7.18.6",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "27.5.2",
     "@types/node": "18.7.18",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
@@ -51,7 +51,7 @@
     "eslint": "8.24.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^4.3.8",
+    "husky": "4.3.8",
     "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.1.0",
     "postcss": "8.4.16",
@@ -63,16 +63,16 @@
     "ts-loader": "9.4.1",
     "typescript": "4.8.3",
     "webpack": "5.75.0",
+    "jest": "27.5.1",
     "webpack-cli": "4.10.0",
+    "identity-obj-proxy": "3.0.0",
     "webpack-dev-server": "4.11.1",
-    "webpack-node-externals": "3.0.0"
+    "webpack-node-externals": "3.0.0",
+    "@testing-library/jest-dom": "5.16.5"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "express": "4.18.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "nanoid": "^3.3.4",
+    "nanoid": "3.3.4",
     "normalize.css": "8.0.1"
   },
   "jest": {
